Set z-index for buttons to 1: to fix issue of showing over the navigation menu

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -87,7 +87,7 @@
     }
   }
   .btn {
-    z-index: 2;
+    z-index: 1;
     transform: translate3d(0, -70px, 0);
     color: lighten($primary-color, 20);
   }
